fixed alignment and data labels

--- a/txlege84/static/scss/theme/_tables.scss
+++ b/txlege84/static/scss/theme/_tables.scss
@@ -139,3 +139,11 @@ tr {
   }
 
 }
+
+.new-law-table {
+  table {
+    .align-left {
+      text-align: left;
+    }
+  }
+}
